--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MARKOCOP SLOT</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
 
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3 shadow">
+    <a class="navbar-brand" href="#">MARKOCOP SLOT</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#">Beranda</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Tentang</a></li>
+        <li class="nav-item"><a class="nav-link btn btn-outline-light ms-2" href="#">Login/Register</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Game Cards -->
+  <div class="container mt-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
+      <!-- Card 1 -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/images/game1.jpg" class="card-img-top" alt="Game 1">
+          <div class="card-body">
+            <h5 class="card-title">Legenda Slot</h5>
+            <p class="card-text">Game slot paling seru dengan efek memukau dan hadiah menarik!</p>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%; background: linear-gradient(to right, red, green);" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/images/game2.jpg" class="card-img-top" alt="Game 2">
+          <div class="card-body">
+            <h5 class="card-title">Raja Spin</h5>
+            <p class="card-text">Putaran cepat, peluang besar. Menangkan jackpot setiap hari!</p>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 60%; background: linear-gradient(to right, red, green);" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/images/game3.jpg" class="card-img-top" alt="Game 3">
+          <div class="card-body">
+            <h5 class="card-title">Slot Emas</h5>
+            <p class="card-text">Kemenangan emas menantimu di game bertema harta karun ini.</p>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 45%; background: linear-gradient(to right, red, green);" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
