--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
     </div>
   </div>
 
+  <!-- Footer -->
+<footer class="bg-dark text-light text-center py-4 mt-5">
+  <div class="container">
+    <p class="mb-1">&copy; 2025 MARKOCOP SLOT. All rights reserved.</p>
+    <p class="small">
+      <a href="#" class="text-decoration-none text-light me-3">Kebijakan Privasi</a>
+      <a href="#" class="text-decoration-none text-light me-3">Syarat & Ketentuan</a>
+      <a href="#" class="text-decoration-none text-light">Hubungi Kami</a>
+    </p>
+  </div>
+</footer>  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
